Add product details functionality

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -93,3 +93,15 @@ body {
         padding-top: 164px;
     }
 }
+
+/* pad the top a bit with */
+
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    .box {
+        height: calc(100vh - 116px);
+    }
+}
