--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,11 +12,11 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="conatiner mb-2">
+    <div class="container mb-2">
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4"></h2>
+                <h2 class="logo-font mb-4">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
