--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,15 +1,17 @@
 <script type="text/javascript">
+    //increment quantity item shopping bag
     $('.increment-qty').click(function(e) {
-        e.preventDefault();
-        var closestInput = $(this).closest('input-group').find('.qty_input')[0];
-        var currentValue = parseInt($(closestInput).val());
-        $(closestInput).val(currentValue + 1);
-    });
-
+       e.preventDefault();
+       var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
+       var currentValue = parseInt($(closestInput).val());
+       $(closestInput).val(currentValue + 1);
+     });
+     
+    //decrement quantity item shopping bag
     $('.decrement-qty').click(function(e) {
         e.preventDefault();
-        var closestInput = $(this).closest('input-group').find('.qty_input')[0];
-        var currentValue = parseInt($(closestInput).val());
-        $(closestInput).val(currentValue - 1);
+       var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
+       var currentValue = parseInt($(closestInput).val());
+       $(closestInput).val(currentValue - 1);
     });
 </script>
