--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-
+    // Disable +/- buttons outside 1-99 range
     function handleEnableDisable(itemId) {
         var currentValue = parseInt($(`#id_qty_${itemId}`).val());
         var minusDisabled = currentValue < 2;
@@ -21,7 +21,7 @@
         handleEnableDisable(itemId);
     });
 
-    //increment quantity item shopping bag
+    // Increment quantity
     $('.increment-qty').click(function(e) {
        e.preventDefault();
        var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
@@ -29,11 +29,11 @@
        $(closestInput).val(currentValue + 1);
        var itemId = $(this).data('item_id');
        handleEnableDisable(itemId);
-     });
+    });
 
-    //decrement quantity item shopping bag
+    // Decrement quantity
     $('.decrement-qty').click(function(e) {
-        e.preventDefault();
+       e.preventDefault();
        var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
        var currentValue = parseInt($(closestInput).val());
        $(closestInput).val(currentValue - 1);
