--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -108,7 +108,7 @@
     </div>
 {% endblock %}
 
-{% block postcodejs %}
+{% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
