--- a/templates/base.html
+++ b/templates/base.html
@@ -133,7 +133,7 @@
     {% block content %}
     {% endblock %}
 
-    {% block postcodejs %}
+    {% block postloadjs %}
     {% endblock %}
 
 </body>
