--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,14 +1,12 @@
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="arrow-up arrow-success"</div>
-    <div class="w-100 toast-capper bg-success"</div> 
-
+    <div class="arrow-up arrow-success"></div>
+    <div class="w-100 toast-capper bg-success"></div> 
     <div class="toast-header bg-white text-dark">
         <strong class="mr-auto">Success!</strong>
         <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-
     <div class="toast-body bg-white">
         <div class="row">
             <div class="col">
@@ -18,15 +16,15 @@
         </div>
         {% if grand_total %}
             <p class="logo-font bg-white text-black py-1">Your Bag ({{ product_count }})</p>
-            <div class="bad-notification-wrapper">
+            <div class="bag-notification-wrapper">
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-3 my-1">
-                            <img src="{{ item.product.name }}" alt="{{ item.product.name }}" class="w-100">
+                            <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="w-100">
                         </div>
                         <div class="col-9">
                             <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                            <p class="my-0 small">Size: {% if item.product.has_size %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
+                            <p class="my-0 small">Size: {% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
                             <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                         </div>
                     </div>
@@ -35,7 +33,7 @@
             <div class="row">
                 <div class="col">
                     <strong><p class="mt-3 mb-1 text-black">
-                        Total{% if free_delivery_delta > 0 %} (Exc. delivery) {% endif %}:
+                        Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}:
                         <span class="float-right">${{ total|floatformat:2 }}</span>
                     </p></strong>
                     {% if free_delivery_delta > 0 %}
