--- a/static/css/base.css
+++ b/static/css/base.css
@@ -40,7 +40,7 @@ body {
 
 .btn-outline-black {
     background: white;
-    color: black !important; /* use important to override link colors fo <a> elemnts*/
+    color: black !important; /* use important to override link colors for <a> elements */
     border: 1px solid black;
 }
 
@@ -74,13 +74,13 @@ body {
 }
 
 .overlay {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background: white;
-    z-index: -1;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
 }
 
 a.category-badge > span.badge:hover {
@@ -105,6 +105,8 @@ a.category-badge > span.badge:hover {
 input[name='q']::placeholder {
     color: #aab7c4;
 }
+
+/* ------------------------------- bootstrap toasts */
 
 .message-container {
     position: fixed;
@@ -171,6 +173,7 @@ input[name='q']::placeholder {
     overflow-x: hidden;
     overflow-y: auto;
 }
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
@@ -180,7 +183,7 @@ input[name='q']::placeholder {
   }
 }
 
-/* Allauth forms */
+/* Allauth form formatting */
 
 .allauth-form-inner-content p {
     margin-top: 1.5rem; /* mt-4 */
@@ -202,7 +205,7 @@ input[name='q']::placeholder {
 
 .allauth-form-inner-content button,
 .allauth-form-inner-content input[type='submit'] {
-    /* btn */
+	/* btn */
 	display: inline-block;
     font-weight: 400;
     color: #fff;
@@ -221,7 +224,6 @@ input[name='q']::placeholder {
 
     /* standard bootstrap btn transitions */
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-
 }
 
 .allauth-form-inner-content button:hover,
@@ -234,7 +236,6 @@ input[name='q']::placeholder {
 .allauth-form-inner-content a {
 	color: #17a2b8; /* text-info */
 }
-
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
@@ -251,14 +252,13 @@ input[name='q']::placeholder {
     }
 }
 
-/* pad the top a bit with */
-
+/* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
     }
 
-    .box {
+    body {
         height: calc(100vh - 116px);
     }
 }
