--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -9,7 +9,7 @@
             <label for="{{ widget.checkbox_id }}" class="custom-control-label text-danger">{{ widget.clear_checkbox_label }}</label>
         </div>
     {% endif %}<br>
-    {{ widget.input_text }}:
+    {{ widget.input_text }}
 {% endif %}
 <span class="btn btn-black rounded-0 btn-file">
     Select Image<input type="{{ widget.type }}" id="new-image" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
